# Estudos-Engenharia-de-Dados

./: README.md
Aula 01/: README.md  exercicio02.py
Aula 02/: exercicios.py
Bootcamp-Python/: pyproject.toml  pyvenv.cfg
Bootcamp-Python/Aula 01/: README.md  desafio01.py  exercicio01.py
Bootcamp-Python/Aula 02/: README.md  exercicios.py
Bootcamp-Python/Aula 03/: README.md  desafio03.py  exercicios.py
Bootcamp-Python/Aula 04/: README.md  arquivos.py  aula_algoritmo.py  desafio04.py  exemplo.csv  exercicios04.py
