[tool.poetry]
name = "bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Renan Marx <renanmarx@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.1.0"
seaborn = "^0.13.2"
plotly = "^5.23.0"
statistics = "^1.0.3.5"
yfinance = "^0.2.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
